# Kingly

./: .gitignore  Cargo.toml  README.md  kingly-old
.cargo/: config
OpenBench/: Makefile
benches/: my_benchmark.rs  search.rs
lib/: Cargo.toml  rustfmt.toml
lib/benches/: bench.rs
lib/src/: fen.rs  lib.rs  square_map.rs  tables.rs  time_mananger.rs  zobrist.rs
lib/src/collections/: mod.rs  move_list.rs  square_map.rs
lib/src/eval/: material.rs  mod.rs  piece_square_tables.rs  standard.rs  tests.rs
lib/src/move_gen/: mod.rs  tests.rs
lib/src/position/: fen.rs  mod.rs  pieces.rs  tests.rs
lib/src/search/: mod.rs  tests.rs  thread.rs  trace.rs  transposition_table.rs
lib/src/tables/: tests.rs
lib/src/types/: bitboard.rs  misc.rs  mod.rs  moves.rs  piece.rs  square.rs  value.rs
lib/src/types/bitboard/: mod.rs
lib/src/util/: mod.rs
lib/src/zobrist/: mod.rs
resources/test/: perft_positions.json
src/: cli.rs  io.rs  lib.rs  lookup_table.rs  main.rs  move_gen.rs  move_list.rs  position.rs  square_map.rs  types.rs  uci.rs
src/client/: mod.rs  tests.rs
src/eval/: material.rs  mod.rs  standard.rs  tests.rs
src/framework/: castling.rs  color.rs  direction.rs  fen.rs  io.rs  log.rs  mod.rs  moves.rs  piece.rs  search.rs  square.rs  square_map.rs  square_vec.rs  util.rs  value.rs
src/move_gen/: magics.rs  mod.rs  perft.rs  tests.rs
src/position/: fen_parser.rs  mod.rs  pieces.rs  tests.rs
src/search/: mod.rs  tests.rs  transposition_table.rs
src/standard/: bitboard.rs  client.rs  eval.rs  game.rs  iter.rs  mod.rs  move_gen.rs  piece_map.rs  position.rs  search.rs  tables.rs  zobrist.rs
src/standard/bitboard/: iter.rs
src/standard/eval/: tests.rs
src/standard/move_gen/: factory.rs  tests.rs
src/standard/position/: castling.rs  move_gen.rs  tests.rs
src/standard/position/move_gen/: tests.rs
src/standard/search/: tests.rs  transposition_table.rs
src/standard/tables/: tests.rs
src/standard/zobrist/: tests.rs
src/tables/: mod.rs  tests.rs
src/test/: client.rs  mod.rs  search.rs
src/types/: bitboard.rs  bitboards.rs  castling.rs  color.rs  misc.rs  mod.rs  moves.rs  piece.rs  square.rs  square_map.rs  value.rs
src/types/bitboard/: iter.rs  mod.rs
src/uci/: mod.rs  parser.rs  tests.rs  writer.rs
src/util/: mod.rs
src/zobrist/: mod.rs  tests.rs
tools/: Cargo.toml
