[package]
name = "kingly"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "lib", "tools"]
default-members = [".", "lib", "tools"]

[dependencies]
kingly-lib = { path = "lib" }
itertools = "0.10.1"
strum_macros = "0.23.1"
parking_lot = "0.12.0"
tracing = "0.1.34"

[dev-dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
criterion = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[[bench]]
name = "search"
harness = false
