[package]
name = "kingly"
version = "0.1.0"
edition = "2021"
default-run = "kingly"
authors = ["Lasse Møldrup <lasse.moeldrup@gmail.com>"]

[workspace]
members = [".", "lib", "tools"]
default-members = [".", "lib", "tools"]

[dependencies]
kingly-lib = { path = "lib" }
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
thiserror = "2.0"
pretty_env_logger = "0.5"
once_cell = "1.20"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
