[package]
name = "kingly-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.2"
bitintr = "0.3.0"
take-until = "0.1.0"
itertools = "0.10.1"
strum_macros = "0.24.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
bytemuck = { version = "1.7.3", features = ["min_const_generics"] }
intmap = "2.0.0"
parking_lot = "0.12.0"
log = "0.4.17"
