[package]
name = "kingly-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8"
num_cpus = "1.16"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
itertools = "0.12"
intmap = "2.0"
lazy_static = "1.4"
bitintr = "0.3"
rand = { version = "0.8", features = ["min_const_gen"] }
rand_chacha = "0.3"
arrayvec = "0.7"
log = "0.4"

[dev-dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
